Upload donations and download pages
Adjust menu and other issues and upload pages donations for fundations ELA and page download and view repository

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="index.html">Inicio</a>
                     <a href="donaciones.html">Donaciones</a>
                     <a href="informacion.html">Información</a>
-                    <a href="descargar.zip">Descargar</a> 
+                    <a href="descargar.html">Descargar</a> 
                 </nav>
             </div>
             
