--- a/informacion.html
+++ b/informacion.html
@@ -31,7 +31,7 @@
                     <a href="index.html">Inicio</a>
                     <a href="donaciones.html">Donaciones</a>
                     <a href="informacion.html">Información</a>
-                    <a href="descargar.zip">Descargar</a> 
+                    <a href="descargar.html">Descargar</a> 
                 </nav>
             </div>
             
